# crewui

./: .gitignore  README.md  dev.sh  docker-compose.yml  setup.sh  start-dev.sh  test_report.md
.cursor/rules/: prd.mdc
backend/: .uvignore  Dockerfile.dev  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  SIMPLE_MIGRATION.md  env.example  main.py  pyproject.toml  requirements.txt  test_crewai_integration.py
backend/app/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  executions.py  processes.py  tasks.py  tools.py  websockets.py
backend/app/core/: config.py  crewai_service.py  crewai_tools.py
backend/app/models/: __init__.py  agent.py  execution.py  process.py  task.py  tool.py
backend/app/schemas/: tool.py
backend/scripts/: dev.sh  migrate_to_python312.sh  migrate_to_python312_alternative.sh  populate_crewai_tools.py  quick_migrate.sh  simple_migrate.sh
frontend/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/executions/: page.tsx
frontend/app/processes/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tools/: page.tsx
frontend/components/agents/: AgentCard.tsx  AgentForm.tsx  AgentLibrary.tsx
frontend/components/executions/: ExecutionCard.tsx  ExecutionLibrary.tsx  ExecutionMonitor.tsx
frontend/components/layout/: Navigation.tsx
frontend/components/processes/: ProcessBuilder.tsx  ProcessCard.tsx  ProcessForm.tsx  ProcessLibrary.tsx  StreamingExecutionModal.tsx  ToolSelector.tsx  VariableInputDialog.tsx
frontend/lib/: config.ts
frontend/types/: agent.ts  execution.ts  process.ts  task.ts  tool.ts
(+18 files in other folders)
